# HRAG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
hrag/: __init__.py  builder.py  chunker.py  cli.py  compressor.py  config.py  embedder.py  generator.py  pipeline.py  retriever.py  tree.py
tests/: conftest.py  test_chunker.py  test_compressor.py  test_retriever.py  test_tree.py
