[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humanized-rag"
version = "0.1.0"
description = "H-RAG: Hierarchical Vector Compression and Topic-Guided Retrieval for RAG"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "H-RAG Contributors" },
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "hierarchical",
    "vector-compression",
    "topic-tree",
    "nlp",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "hdbscan>=0.8.33",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pypdf>=3.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]
demo = [
    "rich>=13.0.0",
]

[project.scripts]
hrag = "hrag.cli:main"

[project.urls]
Homepage = "https://github.com/AnasAmchaar/HRAG"
Documentation = "https://github.com/AnasAmchaar/HRAG#readme"
Repository = "https://github.com/AnasAmchaar/HRAG"
Issues = "https://github.com/AnasAmchaar/HRAG/issues"
Changelog = "https://github.com/AnasAmchaar/HRAG/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["hrag*"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hrag"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
